css/pages/_registration-page.less
.registration-page {
	@backgroundColor: hsl(209, 12%, 48%);
	@color: hsl(30, 83%, 93%);
	@inputColor: hsl(30, 97%, 83%);
	@hoverColor: hsl(30, 100%, 72%);
	@bottomBorderColor: hsl(30, 0%, 82%);

	background-color: @backgroundColor;
	color: @color;
	min-height: 105vh;

	.wrapper {
		display: flex;
		flex-direction: column;
		align-items: flex-start;
		max-width: 30em;
	}

	.autarkis-note {
		display: none;
	}

	h1 {
		align-self: center;
	}

	a {
		border-bottom-color: @bottomBorderColor;
		&:hover,
		&:focus {
			color: @hoverColor;
			border-bottom-color: @hoverColor;
		}
	}

	form {
		background-color: @backgroundColor;
		color: @color;
		padding: 2em 3em 0;
		margin: 2em -3em 0;
		border-top: 1px solid;
		font-size: 1.1em;
		font-style: italic;
	}

	fieldset {
		padding: 0;
		margin: 0 0 1em;
		border: none;
	}

	input, select, textarea {
		background: transparent;
		border: none;
		border-bottom: 1px dashed @bottomBorderColor;
		color: @inputColor;
		font-family: 'texgyrepagella', serif;
		font-size: 1em;
		font-style: italic;
		text-align-last: center; // a hack to center select and input text
		&:hover,
		&:focus {
			color: @hoverColor;
		}
		&::placeholder  {
			color: hsl(230, 6%, 62%);
		}
	}

	select {
		appearance: none;
	}

	textarea {
		width: 100%;
		margin-top: 1em;
		text-align-last: left;
		padding: 2px 5px;
	}

	button {
		display: block;
		background: @color;
		color: @backgroundColor;
		border: none;
		border-radius: 4px;
		margin: 2em auto 0;
		padding: 0.7em;
		font-size: 1.3em;
		font-family: 'Metamorphous', cursive;
		&:hover,
		&:focus {
			background: darken(@color, 7%);
			box-shadow: 0px 2px 12px 2px hsla(0, 0%, 0%, 0.12);
		}
		&:active {
			background: darken(@color, 10%);
		}
	}
}

